force-app/main/default/objects/Account/fields/Custom_Field_Branch__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Branch__c</fullName>
    <label>Custom Field Branch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>