force-app/main/default/objects/Account/fields/Custom_Field_Master__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Master__c</fullName>
    <label>Custom Field Master</label>
    <length>10</length>
    <type>Text</type>
</CustomField>